Commit:  1. add sendBookmark and sendInteraction  2. update controller

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sample "Hello, World" Application</title>
+    <title>Movie Explorer</title>
 </head>
 <body>
-    <h1>Sample "Hello, World" Application</h1>
+    <h1>"Hello, World"</h1>
 </body>
 </html>
